--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/provider/index.ts", "app/redux/store.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/provider/index.ts", "app/redux/store.ts", "app/(pages)/(auth)/auth/signin/page.tsx"],
   "exclude": ["node_modules"]
 }
