--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.51.0",
     "react-loading-skeleton": "^3.4.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
