--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-redux": "^7.1.33",
     "axios": "^1.6.7",
     "cookie-ts": "^1.0.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.8",
     "moment": "^2.30.1",
     "next": "14.1.0",
