--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
+    "react-tiny-popover": "^8.0.4",
     "react-toastify": "^10.0.4",
     "react-top-loading-bar": "^2.3.1",
     "redux-persist": "^6.0.0",
