--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
+    "react-responsive": "^10.0.0",
     "react-select": "^5.8.0",
     "react-tiny-popover": "^8.0.4",
     "react-toastify": "^10.0.4",
