--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-otp-input": "^3.1.1",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
     "react-responsive": "^10.0.0",
     "react-select": "^5.8.0",
