--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18",
+    "react-dropdown-select": "^4.11.2",
     "react-hook-form": "^7.51.0",
     "react-loading-skeleton": "^3.4.0",
     "react-material-ui-carousel": "^3.4.2",
