--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18",
     "react-dropdown-select": "^4.11.2",
