fix : fixed all bug responsive

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@ BASE_URL_DEV = 'http://localhost:3000'
 
 # for production
 
-BASE_URL = 'http://your_url'
+NODE_ENV = 'production'
+BASE_URL = 'https://your_url'
