--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:fandy123@localhost:12345/kumbangsari?schema=public"
+# DATABASE_URL="postgresql://postgres:fandy123@localhost:12345/kumbangsari?schema=public"
+DATABASE_URL="postgresql://postgres:hxWfRCVXBFsJeiPGKhiTUfEptFRTKIrG@roundhouse.proxy.rlwy.net:46355/railway"
